[gd_scene load_steps=5 format=3 uid="uid://qy4nn0tr11ei"]

[ext_resource type="Script" path="res://scripts/character_movement.gd" id="1_nnh1k"]
[ext_resource type="Texture2D" uid="uid://c3thlv3mc0dcu" path="res://resources/celeste.png" id="2_nvkvq"]

[sub_resource type="PackedScene" id="PackedScene_fqe4j"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Projectile", "Node2D"),
"node_count": 1,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 0, 0),
"variants": [],
"version": 3
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kmk0r"]
radius = 7.6956

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("CharSprite", "AimLine", "ReloadTimer", "AmmoLabel")]
up_direction = Vector2(0, 1)
script = ExtResource("1_nnh1k")
Projectile = SubResource("PackedScene_fqe4j")
CharSprite = NodePath("CharSprite")
AimLine = NodePath("Line2D")
ReloadTimer = NodePath("ReloadTimer")
AmmoLabel = NodePath("AmmoLabel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_kmk0r")
debug_color = Color(4.81308e-08, 0.205674, 0.245472, 0.42)

[node name="CharSprite" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("2_nvkvq")
flip_h = true

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 10, 2)
width = 1.0
default_color = Color(0.903598, 0.903598, 0.903598, 1)

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AmmoLabel" type="Label" parent="."]
self_modulate = Color(0.223103, 0.223103, 0.223103, 1)
offset_left = 11.0
offset_top = -42.0
offset_right = 51.0
offset_bottom = -19.0
text = "8"

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
